adv media details

--- a/app/views/organization/media.html
+++ b/app/views/organization/media.html
@@ -6,6 +6,7 @@
     </ul>
     <div class="pull-right">
         <a ng-show="PermissionService.showMenu('CREATE_MEDIAASSET')" href="#/createMedia" class="btn btn-primary"><i class="icon-plus icon-white"></i> {{ 'link.create.new.media' | translate }}</a>
+        <a ng-show="PermissionService.showMenu('CREATE_MEDIAASSET')" href="#/createAdvanceMedia" class="btn btn-primary"><i class="icon-plus icon-white"></i> {{ 'link.create.adv.media' | translate }}</a>
     </div>
 </div>
 <div class="row-fluid" >
@@ -17,6 +18,8 @@
                 <th>{{ 'table.media.rating' | translate }}</th>
                 <th>{{ 'table.media.releasedate' | translate }}</th>
                 <th>{{ 'table.media.status' | translate }}</th>
+                <th>Options</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -25,8 +28,126 @@
                 <td class="pointer" data-ng-click="routeTo(media.mediaId)">{{media.mediaRating}}</td>        
                 <td class="pointer" data-ng-click="routeTo(media.mediaId)">{{media.releaseDate | DateFormat}}</td>         
                 <td class="pointer" data-ng-click="routeTo(media.mediaId)">{{media.status}}</td>
+                <td>
+                <a data-ng-click="createMediaLocations(media.mediaId)" popover="Add Location" popover-trigger="mouseenter"><img src="./images/location-circled.svg" width="15px" height="10px"></a>
+                <a data-ng-click="createMediaAttributes(media.mediaId)" popover="Add Attributes" popover-trigger="mouseenter"><i class="icon-th icon-white"></i></a>
+                </td>
+                <td><a href="#/editmedia/{{media.mediaId}}" popover="Edit" popover-trigger="mouseenter"><i class="icon-edit icon-white"></i></a></td>
             </tr>
         </tbody>
     </table>
 </div>
+<script type="text/ng-template" id="medialocation.html">
+<div class="modalNew">
+	<form class="form-horizontal well" ng-submit="submit()">
+	 <div class="error" ng-show="errorStatus || errorDetails">
+		<label>{{'label.contract.error' | translate}}</label>
+		<label ng-show="errorStatus">{{errorStatus}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	 </div>
+	<fieldset>
+		<legend>Add MediaLocation</legend>
+		<table>
+			
+				<tr class="control-group">
+                <td>
+                  <label class="control-label"><h4>{{ 'label.media.medialocation' | translate }}<span class="required">*</span></h4></label>
+                </td>
+                <td class="blockquoteresult">
+                    <form>
+                      <select ng-model="mediaLocationFormData.languageId" ng-options="mediaLanguageData.id as mediaLanguageData.mCodeValue  for mediaLanguageData in mediaLanguageDatas" value="{{mediaLanguageData.languageId}}">
+                      </select>&nbsp;&nbsp;
+                      <select  class="input-medium" ng-model="mediaLocationFormData.formatType" ng-options="mediaFormat.mediaName as mediaFormat.mediaName for mediaFormat in mediaFormats" value="{{mediaFormat.mediaName}}">
+                      </select>&nbsp;&nbsp;
+                      <input type="text" ng-model="mediaLocationFormData.location" placeholder="{{'label.media.location' | translate}}">
+                      <a ng-click="addMediaLocation()">&nbsp;<i class="icon-plus icon-white"></i></a>
+                    </form>
+                  <table class="table" width="100%" ng-show="mediaAssetLocations.length>0">
+                    <tr class="graybg">
+                      <th>{{'table.heading.language' | translate}}</th>
+                      <th>{{'table.heading.format' | translate}}</th>
+                      <th>{{'table.heading.location' | translate}}</th>
+                    </tr>
+                    <tr ng-repeat="mediaAssetLocation in mediaAssetLocations" >
+                      <td><select ng-model="mediaAssetLocation.languageId" ng-options="mediaLanguageData.id as mediaLanguageData.mCodeValue  for mediaLanguageData in mediaLanguageDatas" value="{{mediaAssetLocation.languageId}}">
+                      </select></td>
+                      <td><select  class="input-medium" ng-model="mediaAssetLocation.formatType" ng-options="mediaFormat.mediaName as mediaFormat.mediaName for mediaFormat in mediaFormats" value="{{mediaAssetLocation.formatType}}">
+                      </select></td>
+                      <td> <input type="text" ng-model="mediaAssetLocation.location" placeholder="{{'label.media.location' | translate}}"></td>
+                      <td><a ng-click="removeMediaLocation($index)"><i class="icon-remove icon-white"></i></a></td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+
+		</table>
+	</fieldset>
+	</form>
+   <div class="modal-footer">
+         <button id="cancel" class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
+         <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flag">{{'label.confirm' | translate}}</button>
+   </div>
+</div>
+</script> 
+
+<script type="text/ng-template" id="mediaattribute.html">
+<div class="modalNew">
+	<form class="form-horizontal well" ng-submit="submit()">
+	 <div class="error" ng-show="errorStatus || errorDetails">
+		<label>{{'label.contract.error' | translate}}</label>
+		<label ng-show="errorStatus">{{errorStatus}}</label>
+		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
+	 </div>
+	<fieldset>
+		<legend>Add MediaAttributes</legend>
+		<table>
+			
+				<tr class="control-group">
+                <td>
+                  <label class="control-label"><h4>{{ 'label.media.mediadetails' | translate }}<span class="required">*</span></h4></label>
+                </td>
+                <td class="blockquoteresult">
+                    <form>
+                    <input class="input-small" type="text" ng-model="attributesFormData.attributeType" readonly >&nbsp;&nbsp;
+                      <select ng-model="attributesFormData.attributeName" ng-options="mediaAttribute.id as mediaAttribute.mediaName for mediaAttribute in mediaAttributes" class="input-small" value="{{mediaAttribute.id}}">
+                      </select>&nbsp;&nbsp;
+                      <input class="input-small" type="text" ng-model="attributesFormData.attributevalue"  placeholder="{{'label.media.captionvalue' | translate}}">&nbsp;&nbsp;
+                      <input class="input-small" type="text" ng-model="attributesFormData.attributeNickname"  placeholder="{{'label.media.nickname' | translate}}">&nbsp;&nbsp;
+                      <input class="input-small"  type="text" ng-model="attributesFormData.attributeImage" placeholder="{{'label.media.image' | translate}}">
+                      
+                      <a ng-click="addMedia()">&nbsp;<i class="icon-plus icon-white"></i></a>&nbsp;&nbsp;
+                    </form>
+                    <br><br>
+                  <table class="table" width="100%" ng-show="mediaassetAttributes.length>0">
+                    <tr></tr>
+                    <tr class="graybg">
+                      <th>{{'table.media.cast' | translate}}</th>
+                      <th>{{'table.heading.attributetype' | translate}}</th>
+                      <th>{{'label.media.captionvalue' | translate}}</th>
+                      <th>{{'label.media.nickname' | translate}}</th>
+                       <th>{{'label.media.image' | translate}}</th>
+                    </tr>
+                    <tr ng-repeat="mediaassetAttribute in mediaassetAttributes" >
+                      <td><input type="text" class="input-small"  ng-model="mediaassetAttribute.attributeType" readonly></td>
+                      <td><select ng-model="mediaassetAttribute.attributeName" ng-options="mediaAttribute.id as mediaAttribute.mediaName for mediaAttribute in mediaAttributes" class="input-small" value="{{mediaassetAttribute.attributeName}}"></select></td>
+                      <td><input type="text" class="input-small" ng-model="mediaassetAttribute.attributevalue" placeholder="{{'label.media.captionvalue' | translate}}"></td>
+                      <td><input type="text" class="input-small" ng-model="mediaassetAttribute.attributeNickname" placeholder="{{'label.media.nickname' | translate}}"></td>
+                      <td><input type="text" class="input-small" ng-model="mediaassetAttribute.attributeImage" placeholder="{{'label.media.image' | translate}}"></td>
+                      <td><a ng-click="deleteMedia($index)"><i class="icon-remove icon-white"></i></a></td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+
+		</table>
+	</fieldset>
+	</form>
+   <div class="modal-footer">
+         <button id="cancel" class="btn btn-warning" ng-click="reject()">{{'button.cancel' | translate}}</button>
+         <button id="submit" class="btn btn-primary" ng-click="accept()" ng-disabled="flag">{{'label.confirm' | translate}}</button>
+   </div>
+</div>
+</script> 
+
+
 </div>
