--- a/myaccount/selfcare_module/views/clients/changeorder.html
+++ b/myaccount/selfcare_module/views/clients/changeorder.html
@@ -1,4 +1,4 @@
-<div ng-controller="AdditionalOrdersController">
+<div ng-controller="ChangeOrderController">
 <br/>
 <div class="row" ng-show="isOrderPage">
 	<span class="animated wobble" style="margin-left:250px;">Package Selection</span>
@@ -30,7 +30,7 @@
 			    		<tbody>
 			    		  <tr>
 			    			 <td class="animated pulse" style="border-bottom:1px solid #dddddd;border-top:0px;padding-top:30px;">
-			    				 <span style="color:#0088cc;font-size:2em;">{{contractData.duration}}</span>
+			    				 <span style="color:#0088cc;font-size:2.5em;">{{contractData.duration}}</span>
 			    			</td>
 			    			<td style="border-bottom:1px solid #dddddd;border-top:0px;">
 			    				<a class="btn btn-primary cust-btn animated swing" 
