--- a/myaccount/selfcare_module/views/clients/profile.html
+++ b/myaccount/selfcare_module/views/clients/profile.html
@@ -1,27 +1,81 @@
 <div ng-controller="ProfileController">
+<center>
+<h3 class="animated fadeInUp">Status :<i class="icon-circle {{clientData.status.value | StatusLookup}} "></i>{{clientData.status.value}}</h3></center>
+	<!-- <div class="breadcrumb">
+	      <table>
+	        <tr>
+		        <td>
+		        	 <img ng-hide="client.imagePresent" src="./selfcare_module/images/blank_avatar.jpg" alt="Avatar" width="40">
+		         	 <img ng-show="client.imagePresent" src="{{image}}" alt="Avatar" width="40">
+		        </td>
+		        <td>
+		            <span style="color:black;">{{clientData.displayName}}</span>
+		            &nbsp;
+		            <i class="icon-circle {{clientData.status.value | StatusLookup}}"></i>
+		        </td>
+	        	 <td><small style="font-size:30px;">|</small></td>
+		        <td>
+			        <table>
+			        	<tr>
+			        		<td><span>Uniquely identified  {{clientData.accountNo}}</span></td>
+			        	</tr>
+			        	<tr>
+			        		<td><i class="icon-building"></i><span>Office "{{clientData.officeName}}"</span></td>
+			        	</tr>
+			        </table>
+		        </td>
+	        	<td><small style="font-size:30px;">|</small></td>
+		        <td>
+			        <table>
+			        	<tr>
+			        		<td><span>Cell Phone {{clientData.phone}}</span></td>
+			        	</tr>
+			        	<tr>
+			        		<td><span>Device # <strong>{{clientData.hwSerialNumber}}</strong></span></td>
+			        	</tr>
+			        </table>
+		        </td>
+	        	<td><small style="font-size:30px;">|</small></td>
+		        <td>
+			        <table>
+			        	<tr>
+			        		<td><span>Client Type "{{clientData.categoryType}}"</span></td>
+			        	</tr>
+			        	<tr>
+			        		<td><span>Balance&nbsp;{{clientData.balanceAmount}}&nbsp;{{clientData.currency}} </span></td>
+			        	</tr>
+			        </table>
+		        </td>
+	        </tr>
+	      </table>
+	  </div> -->
+		<div class="pull-right">
+			<a href="#/closeclient/{{clientData.id}}" class="btn btn-primary"><i class="icon-remove icon-white"></i>Delete</a>
+		</div>
+		<br/>
  		<div class="row-fluid"  style="margin-top:20px">
             <div class="span7">
  		<strong>Profile:</strong>
               <table  width="100%" >
                   <tr>
                     <td width="35%">First Name:</td>
-                    <td width="65%">{{client.firstname}}</td>
+                    <td width="65%">{{clientData.firstname}}</td>
                   </tr>
                   <tr>
                     <td>Last Name:</td>
-                    <td>{{client.lastname}}</td>
+                    <td>{{clientData.lastname}}</td>
                   </tr>
                   <tr>
-                    <td>Activation Date:</td>
-                    <td valign="top">{{client.activationDate | DateFormat}}</td>
+                    <td>Created Date:</td>
+                    <td valign="top">{{clientData.activationDate | DateFormat}}</td>
                   </tr>
                   <tr>
-                    <td>Phone Number:</td>
-                    <td>{{client.phone}}</td>
+                    <td>Mobile Number:</td>
+                    <td>{{clientData.phone}}</td>
                   </tr>
                   <tr>
                     <td>Email:</td>
-                    <td>{{client.email}}</td>
+                    <td>{{clientData.email}}</td>
                   </tr>
                 </table>
             </div>
@@ -30,15 +84,15 @@
                <table  width="100%" >
 	                 <tr>
 	                   <td width="35%">Address:</td>
-	                   <td width="65%"> {{client.addressNo}}<strong>,</strong>{{client.street}}</td>
+	                   <td width="65%"> {{clientData.addressNo}}<strong>,</strong></td>
 	                 </tr>
 	                 <tr>
 	                   <td>Province:</td>
-	                   <td>{{client.city}}<strong>,</strong>{{client.state}}</td>
+	                   <td>{{clientData.city}}<strong>,</strong>{{clientData.state}}</td>
 	                 </tr>
 	                 <tr>
 	                   <td>Country:</td>
-	                   <td valign="top">{{client.country}}<strong>,</strong>{{client.zip}}</td>
+	                   <td valign="top">{{clientData.country}}<strong>,</strong>{{clientData.zip}}</td>
 	                 </tr>
                </table>
            </div>
