--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -76,8 +76,8 @@
 		     <a ng-show ="(orderData.status == 'ACTIVE')&&PermissionService.showMenu('APPLYPROMO_ORDER')" ng-click="applyPromo()" class="btn btn-primary"><i class="icon-gift"></i>Apply Promo</a>
 		     <a ng-show ="orderData.status != 'PENDING' && orderData.status != 'SUSPENDED'" ng-click="extension()" class="btn btn-primary"><i class="icon-cog"></i>Extension</a>
 		     <a ng-show ="(orderData.status == 'ACTIVE')&&PermissionService.showMenu('CHANGEPLAN_ORDER')" href="#/neworder/{{orderData.pdid}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
-		     <a ng-show ="orderData.status == 'PENDING'" href="#/provision/{{orderData.id}}/{{clientId}}/{{orderServicesData[0].serviceId}}" class="btn btn-primary"><i class="icon-cog"></i>Provision It</a>
-		     <a ng-show ="orderData.status == 'ACTIVE'" href="#/editprovison/{{orderData.id}}/{{clientId}}/{{orderServicesData[0].serviceId}}" class="btn btn-primary"><i class="icon-cog"></i>Edit Provision</a>
+		     <a ng-show ="orderData.status == 'PENDING' && orderData.provisioningSys == 'Packetspan'" href="#/provision/{{orderData.id}}/{{clientId}}/{{orderServicesData[0].serviceId}}" class="btn btn-primary"><i class="icon-cog"></i>Provision It</a>
+		     <a ng-show ="orderData.status == 'ACTIVE' && orderData.provisioningSys == 'Packetspan'" href="#/editprovison/{{orderData.id}}/{{clientId}}/{{orderServicesData[0].serviceId}}" class="btn btn-primary"><i class="icon-cog"></i>Edit Provision</a>
 		     <a ng-show="(orderData.status == 'DISCONNECTED')&&PermissionService.showMenu('RECONNECT_ORDER')" ng-click="terminate()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> Terminate</a>
 		     <a ng-show="orderData.status == 'SUSPENDED'" ng-click="reactive()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i> ReActive</a>
 	        	<span  class="btn-group">
