--- a/app/views/system/editjobparameters.html
+++ b/app/views/system/editjobparameters.html
@@ -15,7 +15,7 @@
 	</div>
   	<form class="form-horizontal" ng-submit="submit()">
 	    <fieldset>
-	       <div class="control-group" ng-show="formData.displayName !='Middleware'" >
+	       <div class="control-group" ng-show="formData.displayName !='Middleware' && formData.displayName !='SIMULATOR'" >
                 <label class="control-label">{{'label.job.reportname' | translate }}<span class="required">*</span></label>
                 <div class="controls">
                   <select ng-model="jobparameters.batchName"  ng-options="reportData.batchName as reportData.batchName for reportData in reportDatas" value="{{office.id}}" >
