--- a/app/views/clients/vieworder.html
+++ b/app/views/clients/vieworder.html
@@ -431,7 +431,7 @@
    <div class="modal-header silver">
   			<h3 class="bolder">{{'dialog.reactive.title.message' | translate}}</h3>
     </div>
-    <div class="modal-body modal-big">
+    <div class="modal-body modal-small">
        	<div class="error" ng-show="errorStatus || errorDetails">
 			<label>{{'label.contract.error' | translate}}</label>
 			<label ng-show="errorStatus">{{errorStatus}}</label>
