--- a/myaccount/selfcare_module/selfcare_styles/app.css
+++ b/myaccount/selfcare_module/selfcare_styles/app.css
@@ -1042,7 +1042,22 @@ nav:hover:after{
   *width: 23.351063829787233%;
 }
 
+.cust-body{
+	padding : 10 10 10 0px;
+	margin-top : 40px;
+	margin-bottom : 50px;
+	border-bottom:1px solid #ddd;
+}
+
 .cust-btn{
+	background:linear-gradient(to bottom, #0090d9 0%, #0a4e7f 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+	border :1px;
+	box-shadow :0 0 3px rgba(0, 0, 0, 0.3);
+	border-radius:5px;
+	margin-top : -20px; 
+	padding : 9px 14px;
+}
+/* .cust-btn{
 	background:linear-gradient(to bottom, #0090d9 0%, #0a4e7f 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
 	border :1px;
 	box-shadow :0 0 3px rgba(0, 0, 0, 0.3);
@@ -1050,22 +1065,31 @@ nav:hover:after{
 	float: right;
 	 margin-top : 30px; 
 	 padding : 9px 14px;
-}
+} */
 
 span.dollars {
+	font-size: 3em;
+	margin-top : 10px; 
+	position: relative;
+}
+/* span.dollars {
 	font-size: 3em;
 	float: right;
 	position: relative;
 	line-height: 0.8em;
 	margin-top : 30px; 
-}
+} */
 
 .sup{
+	font-size : 150%;
+	top : -1em; 
+}
+/* .sup{
 	top : -1.5em;
 	float: right;
 	font-size : 150%;
 	margin-top : 30px; 
-}
+} */
 
 input.input-xtra-large {
   width: 350px;
