--- a/myaccount/selfcare_module/views/clients/statements.html
+++ b/myaccount/selfcare_module/views/clients/statements.html
@@ -3,10 +3,10 @@
 	    <ul class="breadcrumb">
 	        <li class="active">Statements</li>
 	    </ul>
-    </div>
+    </div><br/>
  	<div class="row-fluid">
-		    <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by Id">
-		<br/>
+		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="Filter by Id">
+		
 		<table class="table">
 	        <thead>
 	             <tr class="graybg">
