--- a/myaccount/selfcare_module/views/clients/activateuser.html
+++ b/myaccount/selfcare_module/views/clients/activateuser.html
@@ -147,7 +147,18 @@
 	      		<div  style="margin-left:50px;">
 		      <tabset horizontal="true" type="pills">
 			    <tab heading="{{plan.planCode}}" ng-repeat="plan in plansData">
-			    	<table class="table" ng-repeat="contractData in plan.pricingData track by $index">
+			      <div ng-repeat="contractData in plan.pricingData track by $index" >
+			    	<div class="cust-body animated fadeInUp">
+			    		<span style="color:#0088cc;font-size:2.5em;">{{contractData.duration}}</span>
+			    		<span class="pull-right">
+			    			<sup class="sup animated pulse">Rs.</sup>
+			    			<span class="dollars animated pulse">{{contractData.price}}</span>
+			    			<a class="btn btn-primary cust-btn animated swing" 
+			    				  ng-click="selectedPLandAm(contractData.contractId,plan.planId,contractData.billingFrequency,contractData.price,contractData.planCode,contractData.duration)">Book Order</a>
+			    		</span>
+			    	 </div>
+			       </div>
+			    	<!-- <table class="table" ng-repeat="contractData in plan.pricingData track by $index">
 			    		<tbody>
 			    		  <tr>
 			    			 <td class="animated pulse" style="border-bottom:1px solid #dddddd;border-top:0px;padding-top:30px;">
@@ -161,7 +172,7 @@
 			    			</td>
 			    		  </tr>
 			    		</tbody>
-			    	</table>
+			    	</table> -->
 			    </tab>
 			  </tabset>
 		    </div> 
