--- a/myaccount/selfcare_module/views/clients/changepassword.html
+++ b/myaccount/selfcare_module/views/clients/changepassword.html
@@ -60,7 +60,7 @@
 			</tr>
 		</table>	
 		<div class="offset3">
-			<a id="cancel" href="#/additionalOrders"><button type="reset" class="btn">Cancel</button></a>
+			<a id="cancel" href="#/profile"><button type="reset" class="btn">Cancel</button></a>
 			<button id="submit" type="submit" ng-disabled="!changePwdForm.$valid" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
