--- a/myaccount/selfcare_module/views/clients/orders.html
+++ b/myaccount/selfcare_module/views/clients/orders.html
@@ -1,11 +1,33 @@
 <div ng-controller="OrdersController">
+	 <div class="loading-widget-div" data-ng-show="blockUI">
+        <div id="circularG">
+            <div id="circularG_1" class="circularG">
+            </div>
+            <div id="circularG_2" class="circularG">
+            </div>
+            <div id="circularG_3" class="circularG">
+            </div>
+            <div id="circularG_4" class="circularG">
+            </div>
+            <div id="circularG_5" class="circularG">
+            </div>
+            <div id="circularG_6" class="circularG">
+            </div>
+            <div id="circularG_7" class="circularG">
+            </div>
+            <div id="circularG_8" class="circularG">
+            </div>
+        </div>
+
+      </div>      
+	
 	<div>
 	    <ul class="breadcrumb">
 	        <li class="active">Orders</li>
 	    </ul>
-    </div>
+    </div><br/>
  	<div class="row-fluid">
-		    <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by Order No">
+		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="Filter by Order No">
 		<br/>
 		<table class="table">
 	        <thead>
