--- a/myaccount/selfcare_module/views/clients/profile.html
+++ b/myaccount/selfcare_module/views/clients/profile.html
@@ -1,6 +1,13 @@
 <div ng-controller="ProfileController">
-<center>
-<h3 class="animated fadeInUp">Status :<i class="icon-circle {{clientData.status.value | StatusLookup}} "></i>{{clientData.status.value}}</h3></center>
+	<div style="margin-top:20px;font-size:20px; margin-left:40px;" class="pull-left">
+		<span class="animated pulse" style="color:#0088cc;">Status :&nbsp;</span>
+		<span class="{{clientData.status.value | StatusLookup}} animated fadeInUp"><strong>{{clientData.status.value}}</strong></span>
+	</div>
+	
+	<div style="margin-top:20px;margin-right:60px;" class="pull-right">
+		<span class="animated pulse" style="color:#0088cc;font-size:20px;">Balance :&nbsp;</span>
+		<span class="btn btn-success animated fadeInUp" style="font-size:20px;">{{clientData.balanceAmount}}</span>
+	</div>
 	<!-- <div class="breadcrumb">
 	      <table>
 	        <tr>
@@ -49,11 +56,70 @@
 	        </tr>
 	      </table>
 	  </div> -->
-		<div class="pull-right">
-			<a href="#/closeclient/{{clientData.id}}" class="btn btn-primary"><i class="icon-remove icon-white"></i>Delete</a>
-		</div>
+		
+		<br/><br/><br/><br/><br/>
+		<div class="row-fluid">
 		<br/>
- 		<div class="row-fluid"  style="margin-top:20px">
+			<div class="row-fluid span">
+			
+				<div class="span6">
+				<strong>Profile:</strong>
+					<table width="100%" class="table table-striped table-bordered" width="0px">
+						<tr>
+							<td width="50%">Account Number</td>
+							<td width="50%">{{clientData.accountNo}}</td>
+						</tr>	
+						<tr>
+							<td width="30%">Full Name</td>
+							<td width="70%">{{clientData.displayName}}</td>
+						</tr>
+						<tr>
+							<td width="30%">Created Date</td>
+							<td width="70%">{{clientData.activationDate | DateFormat}}</td>
+						</tr>
+						<tr>
+							<td width="30%">Mobile Number</td>
+							<td width="70%">{{clientData.phone}}</td>
+						</tr>
+						<tr>
+							<td width="30%">Email</td>
+							<td width="70%">{{clientData.email}}</td>
+						</tr>
+						<tr>
+							<td width="30%">Auth Pin</td>
+							<td width="70%">{{clientData.selfcare.authPin}}</td>
+						</tr>
+				  </table>
+			   </div>	
+			  
+				<div class="span5">
+				 <strong>Address:</strong>
+					<table width="100%" class="table table-striped table-bordered">
+						<tr>
+							<td width="30%">Address</td>
+							<td width="70%">{{clientData.addressNo}}</td>
+						</tr>
+						<tr>
+							<td width="30%">City</td>
+							<td width="70%">{{clientData.city}}</td>
+						</tr>
+						<tr>
+							<td width="30%">State</td>
+							<td width="70%">{{clientData.state}}</td>
+						</tr>
+						<tr>
+							<td width="30%">Country</td>
+							<td width="70%">{{clientData.country}}</td>
+						</tr>
+						<tr>
+							<td width="30%">ZipCode</td>
+							<td width="70%">{{clientData.zip}}</td>
+						</tr>
+					</table>
+				</div>			
+			</div>
+		</div>
+ 		<!-- <div class="row-fluid"  style="margin-top:100px">
             <div class="span7">
  		<strong>Profile:</strong>
               <table  width="100%" >
@@ -96,5 +162,5 @@
 	                 </tr>
                </table>
            </div>
-         </div>
+         </div> -->
 </div>
