--- a/myaccount/selfcare_module/views/clients/tickets.html
+++ b/myaccount/selfcare_module/views/clients/tickets.html
@@ -1,4 +1,26 @@
 <div ng-controller="TicketsController">
+ <div class="loading-widget-div" data-ng-show="blockUI">
+        <div id="circularG">
+            <div id="circularG_1" class="circularG">
+            </div>
+            <div id="circularG_2" class="circularG">
+            </div>
+            <div id="circularG_3" class="circularG">
+            </div>
+            <div id="circularG_4" class="circularG">
+            </div>
+            <div id="circularG_5" class="circularG">
+            </div>
+            <div id="circularG_6" class="circularG">
+            </div>
+            <div id="circularG_7" class="circularG">
+            </div>
+            <div id="circularG_8" class="circularG">
+            </div>
+        </div>
+
+      </div>      
+
 	<div>
 	    <ul class="breadcrumb">
 	        <li class="active">Tickets</li>
@@ -8,7 +30,7 @@
  		<div class="pull-right">
 			<a href="#/newTicket/{{clientId}}" class="btn btn-primary"><i class="icon-plus icon-white"></i>Add New Ticket</a>
 		</div>
-		    <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Filter by ID">
+		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="Filter by ID">
 		<br/>
 		<table class="table">
 	        <thead>
