--- a/myaccount/selfcare_module/views/clients/vieworder.html
+++ b/myaccount/selfcare_module/views/clients/vieworder.html
@@ -5,11 +5,9 @@
 	        <li class="active">{{orderData.id}}&nbsp;&nbsp;</li>
 	    </ul>
 	    <div class="pull-right">
-	      <div class="btn-group">
-	         <a ng-show="(orderData.status == 'DISCONNECTED')" ng-click="reconnect()" class="btn btn-primary"><i class=" icon-repeat icon-white"></i>Reconnect</a>
+	         <a ng-show="(orderData.status == 'DISCONNECTED')" href="#/renewalorder/{{orderId}}/{{clientId}}" class="btn btn-primary"><i class="icon-edit icon-white"></i>Renewal</a>
 	         <a ng-show ="(orderData.status == 'ACTIVE')" href="#/additionalorders/{{orderId}}/{{clientId}}" class="btn btn-primary"><i class="icon-cog"></i>Change Plan</a>
 	         <a ng-show="(orderData.status == 'ACTIVE')||(orderData.status == 'SUSPENDED')" ng-click="orderDisconnect(orderData.id)" class="btn btn-primary"><i class="icon-remove fa-spin icon-white"></i>Disconnect</a>
-	      </div>
 	    </div>
 	</div><br/>
 	<label><h2 style="color:#0088cc" class="animated fadeInUp">Order Information</h2></label>
