--- a/myaccount/selfcare_module/views/clients/vodevents.html
+++ b/myaccount/selfcare_module/views/clients/vodevents.html
@@ -6,9 +6,8 @@
     </div>
  	<div class="row-fluid" ng-show="vodEventScreen">
  	<br/>
- 		<form ng-submit="search(filterText)">
-		    <input ng-model="filterText" type="text" class="span marginbottom0px" placeholder="Search Movie">
-		
+ 		<form ng-submit="search(filterText)" style="margin:0px;">
+		    <input ng-model="filterText" type="text" ng-autofocus="true" class="span marginbottom0px" placeholder="Search Movie Name">
 		</form>
 		<table class="table">
 	        <thead>
@@ -62,8 +61,8 @@
 	        </tbody>
 	    </table>
 	   <br/>
-	   <span style="font-size:20px;" class="pull-left">Total</span>
-	   <span style="font-size:20px;" class="pull-right">{{totalAmount}}</span><br/>
+	   <span style="color:#0088cc;font-size:20px;" class="pull-left">Total</span>
+	   <span style="font-size:20px;" class="pull-right">{{totalAmount}}</span><br/><br/>
 		<div class="pull-right" >
 				<a ng-disabled="vodEventRedirectToDalpay"  ng-click="cancelDalpayBtnFun()" class="btn" >Cancel</a>
 				<a href="{{URLForDalpay}}" ng-click="dalpayBtnFun()" ng-disabled="vodEventRedirectToDalpay" class="btn btn-primary animated fadeInUp">Dalpay</a>
