new sale changes

--- a/app/views/clients/addonetimesale.html
+++ b/app/views/clients/addonetimesale.html
@@ -94,7 +94,7 @@
 						<tr>
 							<td>
 								<div class="control-group">
-            					<label class="control-label" for="officeId">officeId</label>
+            					<label class="control-label" for="officeId">From Office</label>
             					<div class="controls">
              					 <select ng-model="formData.officeId" ng-options="officesData.id as officesData.name for officesData in officesDatas" value="{{itemData.id}}">
              					 </select>
@@ -126,7 +126,9 @@
 								<div class="control-group">
             					<label class="control-label" for="chargeCode">{{ 'label.chargeCode' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="chargeCode" ng-model="formData.chargeCode" style="background-color:#FFFFFF;" readonly>
+              					<!-- <input type="text" id="chargeCode" ng-model="formData.chargeCode" style="background-color:#FFFFFF;" readonly> -->
+              					<select ng-model="formData.chargeCode" ng-options="chargecodeData.chargeCode as chargecodeData.chargeCode for chargecodeData in chargecodeDatas" value="{{itemData.id}}">
+             					</select>
             					</div>
           						</div>
 							</td>
@@ -165,7 +167,7 @@
 								<div class="control-group">
             					<label class="control-label" for="unitPrice">{{ 'label.unitPrice' | translate }}</label>
             					<div class="controls">
-              					<input type="text" id="unitPrice" ng-model="formData.unitPrice" style="background-color:#FFFFFF;" readonly>
+              					<input type="text" id="unitPrice" ng-model="formData.unitPrice" ng-change="priceChange(formData.unitPrice,formData.quantity)">
             					</div>
           						</div>
 							</td>
